# ppaass-2025

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent-ui/: package-lock.json  package.json
agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
agent-ui/src-tauri/src/: main.rs
agent/src/: command.rs  config.rs  error.rs  main.rs  proxy.rs  user.rs
agent/src/tunnel/: http.rs  mod.rs  socks5.rs
common/: Cargo.toml
common-macro/src/: lib.rs
common/src/: codec.rs  config.rs  error.rs  lib.rs  log.rs  pool.rs  proxy.rs  runtime.rs  server.rs
common/src/repo/: fs.rs  mod.rs
common/src/user/: mod.rs  repo.rs  user.rs  user_impl.rs
core/: Cargo.toml
core/src/: codec.rs  config.rs  error.rs  lib.rs  runtime.rs  server.rs
crypto/src/: aes.rs  blowfish.rs  error.rs  lib.rs  rsa.rs
protocol/: Cargo.toml
protocol/src/: address.rs  error.rs  lib.rs  packet.rs
proxy/: Cargo.toml
proxy/src/: client.rs  command.rs  config.rs  error.rs  main.rs  tunnel.rs  user.rs
proxy/src/destination/: mod.rs  tcp.rs  udp.rs
resource/: agent.toml  proxy.toml
resource/agent/: agent.toml
resource/proxy/: proxy.toml
resources/: agent.toml  proxy.toml
resources/agent/user/user1/: user_info.toml
script/: install-agent.sh  install-proxy.sh  install-v3.sh  install.sh
user/: Cargo.toml
user/src/: config.rs  error.rs  lib.rs
user/src/repo/: fs.rs  mod.rs
