[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-2025-protocol = { path = "../protocol", package = "protocol" }
ppaass-2025-common = { path = "../common", package = "common" }
ppaass-2025-crypto = { path = "../crypto", package = "crypto" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
futures-util = { workspace = true, features = ["sink"] }
bincode = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
http-body-util = { workspace = true }
tower = { workspace = true }
socks5-impl = { workspace = true, features = ["tokio"] }
clap = { workspace = true, features = ["derive"] }