[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-2025-user = { path = "../user", package = "user" }
ppaass-2025-protocol = { path = "../protocol", package = "protocol" }
ppaass-2025-crypto = { path = "../crypto", package = "crypto" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
rand = { workspace = true }