[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-2025-protocol = { path = "../protocol", package = "protocol" }
ppaass-2025-user = { path = "../user", package = "user" }
ppaass-2025-core = { path = "../core", package = "core" }
ppaass-2025-crypto = { path = "../crypto", package = "crypto" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
