[package]
name = "user"
version = "0.1.0"
edition = "2024"

[dependencies]
ppaass-2025-crypto = { path = "../crypto", package = "crypto" }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }